--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL = mongodb+srv://admin:admin@cluster0.fn5rqk3.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL = your-connection-string
 
-ACCESS_TOKEN_SECRET = nnj&jjAHHN&&GG*Sjjjjrr#tt
-REFRESH_TOKEN_SECRET = NNM&&NN^&*DDDHYIggerrttc
+ACCESS_TOKEN_SECRET = your-access-token
+REFRESH_TOKEN_SECRET = your-refresh-token
